--- a/PruebaSwagger.Business/PruebaSwagger.Business.csproj
+++ b/PruebaSwagger.Business/PruebaSwagger.Business.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PruebaSwagger.Integraciones\PruebaSwagger.Integraciones.csproj" />
     <ProjectReference Include="..\PruebaSwagger.Models\PruebaSwagger.Models.csproj" />
   </ItemGroup>
 
