--- a/PruebaSwagger/PruebaSwagger.csproj
+++ b/PruebaSwagger/PruebaSwagger.csproj
@@ -5,13 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PruebaSwagger.Integraciones\PruebaSwagger.Integraciones.csproj" />
+    <ProjectReference Include="..\PruebaSwagger.Business\PruebaSwagger.Business.csproj" />
     <ProjectReference Include="..\PruebaSwagger.Models\PruebaSwagger.Models.csproj" />
   </ItemGroup>
 
