--- a/PruebaSwagger.Integraciones/PruebaSwagger.Integraciones.csproj
+++ b/PruebaSwagger.Integraciones/PruebaSwagger.Integraciones.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PruebaSwagger.Common\PruebaSwagger.Common.csproj" />
     <ProjectReference Include="..\PruebaSwagger.Models\PruebaSwagger.Models.csproj" />
   </ItemGroup>
 
